test/negative/ConflictingOptions.hx
class ConflictingOptions {
	static function main():Void {
		var value = <heredoc mode="smart" margin="|">|text</heredoc>;
	}
}
